<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitys.AyudaActivity"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ayuda"
        android:textAlignment="center"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/icons"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/se_trata_del_t_pico_juego_de_hundir_la_flota_contra_la_m_quina"
        android:textSize="20dp"
        android:textColor="@color/colorPrimary"
        android:paddingLeft="20dp"
        android:paddingRight="10dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tablero_de_8x8_con_6_barcos"
        android:textSize="20dp"
        android:textColor="@color/colorPrimary"
        android:paddingLeft="20dp"
        android:paddingRight="10dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"

        />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_1_barco_de_4_de_longitud"
        android:textSize="20dp"
        android:textColor="@color/colorPrimary"
        android:paddingLeft="30dp"
        android:paddingRight="10dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="5dp"
    />

    <TextView
    android:id="@+id/textView12"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/_2_barco_de_3_de_longitud"
    android:textSize="20dp"
    android:textColor="@color/colorPrimary"
    android:paddingLeft="30dp"
    android:paddingRight="10dp"
    android:layout_marginBottom="30dp"
    android:layout_marginTop="5dp"
    />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_3_barco_de_2_de_longitud"
        android:textSize="20dp"
        android:textColor="@color/colorPrimary"
        android:paddingLeft="30dp"
        android:paddingRight="10dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gana_quien_hunda_todos_los_barcos_con_menos_intentos_y_en_menos_tiempo"
        android:textSize="20dp"
        android:textColor="@color/colorPrimary"
        android:paddingLeft="20dp"
        android:paddingRight="10dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pierde_si_superas_los_40_intentos"
        android:textSize="20dp"
        android:textColor="@color/colorPrimary"
        android:paddingLeft="20dp"
        android:paddingRight="10dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="5dp"
        />

</LinearLayout>